--- a/report/src/sections/03-background.tex
+++ b/report/src/sections/03-background.tex
@@ -100,13 +100,19 @@ Then Neff's trick~\cite{10.1145/501983.502000}, which observes that two polynomi
 This is proven through a grand product argument.
 To prove that argument, Curdleproofs compiles it down to an~\gls{ipa} by expressing each multiplication of the grand product as its own equation.
 
-Hence, the~\gls{sameperm} proof is done, if the prover can prove the~\gls{ipa}.
+Hence, the~\gls{sameperm} proof is done if the prover can prove the~\gls{ipa}.
 
 
 The second proof is a~\gls{samemsm} argument.
-This proves that permuted set of ciphertexts was made by using the permutation that the prover previously committed to.
+The prover should by now have proven the existence of the permutation.
+Now, the goal of the~\gls{samemsm} argument is to prove that the output ciphertext set was constructed with the same permutation, here called multiscalar, committed to in commitment $A$.
+As the multiscalar is a vector this argument is an~\gls{ipa} by nature, contrary to the~\gls{sameperm} argument.
 
-The third proof is a Same Scalar argument which proves that, given a public input, there exists a scalar, $k$, such that the commitment of the permuted set is equal to the commitment of the pre-permuted set multiplied by $k$.
+The third proof is a Same Scalar argument.
+To mask the ciphertexts, each prover, besides permuting the set, multiplies all ciphertexs by a scalar, $k$.
+This is for randomization purposes, making it harder for adversaries to track the ciphertexts~\cite{Whisk2024}.
+Also, all validators are still able to open their commitments if they are chosen as block proposers, even after several randomizations.
+So, the goal of the Same Scalar argument is to prove the existence of the scalar, $k$, such that the commitment of the permuted set is equal to the commitment of the pre-permuted set multiplied by $k$.
 
 
 
