Moved Ethereum to introduction

--- a/report/src/sections/01-introduction.tex
+++ b/report/src/sections/01-introduction.tex
@@ -1,6 +1,7 @@
 
 
 \section{Introduction}\label{sec:introduction}
-This is the introduction
+Ethereum is a decentralized blockchain platform that enables developers to build and deploy smart contracts and decentralized applications.
+It is the second-largest blockchain platform by market capitalization and has a large and active developer community.
 
 
