Placement of figure changed

--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -1,6 +1,6 @@
 \section{Results}\label{sec:results}
 These are the results
-\begin{figure*}[!ht]
+\begin{figure*}[!htb]
     \centering
     \subfloat[\centering Proving Time]{{\includegraphics[width=0.45\textwidth]{figures/results/provingtime} }}%
     \qquad
