--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -190,7 +190,7 @@ return 1 $\text{if both checks pass, else}$ return 0
 
 Many of the changes to the verifier protocol are equivalent to the ones made to the prover protocol.
 
-At first, step 1, the verifier sets up to run the protocol.
+At step 1, the verifier sets up to run the protocol.
 
 The verifier, on line 2, gets the same cryptographic generators used by the prover,~$\mathbf{G}$, $\mathbf{G}'$ and $H$, from the common reference string.
 Then, from the public input $\phi$, line 3, the verifier gets hold of the original commitments, $C$ and $D$, as well as the result of the inner product between $c$ and $d$.
