--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -1,5 +1,6 @@
 \section{Results}\label{sec:results}
 \subsection{Proving and Verifying Times}\label{subsec:results:provingverifying}
+
 \begin{figure*}[!htb]
     \centering
     \subfloat[\centering Proving Time]{{\includegraphics[width=0.45\textwidth]{figures/results/provingtime} }}%
@@ -8,11 +9,28 @@
     \caption{The timed results compared between CAAUrdleProofs and Curdleproofs}%
     \label{fig:resulttimes}%
 \end{figure*}
+
 After running the experiment where Curdleproofs and CAAUrdleproofs were compared across different Shuffle sizes, we obtained the results shown in \autoref{fig:resulttimes}.
+
 As mentioned in \autoref{sec:CAAUrdleproof-experiment}, CAAUdleproofs was run with a shuffle size $k$ of $\{8,9,\dots,256\}$ but Curdleproofs was only run with a shuffle size $k$ of $\{8,16,32,64,128,256\}$.
-This is why the results for Curdleproofs instantly goes up to the next size of $k$ because it would have to pad the inputset until it reaches the next size of a power of 2.
+This is why the results for Curdleproofs instantly goes up to the next power of 2 size of $k$ because it would have to pad the inputset until it reaches the next size of a power of 2.
+
 From the results, we can see that CAAUrdleproofs and Curdleproofs have similar proving and verifying times when $k$ is a power of 2 but whenever $k$ is not a power of 2 CAAUrdleproofs is faster.
+
+Additional to the proving and verifying times, the time used on shuffling is also lower for any $k$ that is not a power of 2, but that was to be expected since CAAUrdleproofs uses the same shuffling algorithm but does not have to add additional padding values to the non power of 2 input sizes.
 
 
 \subsection{Shuffle security}\label{subsec:Shuffle-security}
+
+
+The results of the shuffle security experiment are shown in \autoref{fig:shufflesecurity}.
+
+\autoref{fig:shufflesecurity} shows the mean of the 1000 runs of each shuffle size $k$ as well as one standard deviation higher and lower.
+
+We can see that the bigger the shuffle size $k$ the less honest shuffles are necessary to make the shuffle secure.
+We also see that the bigger the shuffle size the smaller the deviation is between necessary honest shuffles become.
+
+From the results of the experiment with $\alpha=8192$ we can see that number of honest shuffles necessary to make the shuffle secure sharply goes down until a size of $k=64$, and then it starts to flatten out.
+we can see that with a size of $k=75$ we need about 1/3 of the shuffles to be honest to make the shuffle secure.
+Likewise, we can see the at $k=108$ we need about 1/4 of the shuffles to be honest to make the shuffle secure.
 
