added bpp to appendix

--- a/report/src/sections/aa-appendix.tex
+++ b/report/src/sections/aa-appendix.tex
@@ -5,3 +5,4 @@
 % Insert appendix sections below
 \input{sections/appendix/01-appendix}
 \input{sections/appendix/02-thm1proof}
+\input{sections/appendix/03-bpplus}
