ssle and shuffling

--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -34,3 +34,8 @@ From the results of the experiment with $\alpha=8192$ we can see that number of 
 we can see that with a size of $k=75$ we need about 1/3 of the shuffles to be honest to make the shuffle secure.
 Likewise, we can see the at $k=108$ we need about 1/4 of the shuffles to be honest to make the shuffle secure.
 
+In general all three of the experiments despite the difference in $\alpha$ show the same trend.
+There are two things however that are different between the experiments.
+At an $\alpha$ of 4096 we can see that the mean number of honest shuffles necessary to make the shuffle secure is 500 lower than the 2 others.
+Another thing that differs between the experiments is that they all have sudden dip later on in the experiment.
+Here we can see a trend that the lower the~$\alpha$ the earlier the dip happens.
