Began on corrections2

--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -183,3 +183,11 @@ De-Anonymization Attack on Ethereum", Computer Science 9 project},
     location = {Philadelphia, PA, USA},
     series = {CCS '01}
 }
+
+@misc{cryptoeprint:2023/1241,
+    author = {Dan Boneh and Aditi Partap and Lior Rotem},
+    title = {Post-Quantum Single Secret Leader Election ({SSLE}) From Publicly Re-randomizable Commitments},
+    howpublished = {Cryptology {ePrint} Archive, Paper 2023/1241},
+    year = {2023},
+    url = {https://eprint.iacr.org/2023/1241}
+}
