--- a/report/src/sections/03-related-work.tex
+++ b/report/src/sections/03-related-work.tex
@@ -7,6 +7,10 @@
 A~\gls{ssle} is a protocol where a group of participants randomly elects only one leader from the group.
 The identity of the leader is kept secret from all other participants so only the leader themselves know that they have been chosen.
 The elected leader can then later publicly prove that they have been elected~\cite{10.1145/3419614.3423258}.
+
+Leading research on~\gls{ssle} includes a proposal for a post-quantum secure protocol based on Ring Learning With Errors~\cite{cryptoeprint:2023/1241}.
+They also construct a new concept called~\gls{rrc}, which is based on the commit-and-shuffle approach also used in Whisk.
+
 One of the use cases of~\gls{ssle} is to make~\gls{pos} cryptocurrencies more secure due to the added privacy that the proposer has.
 
 One~\gls{pos} cryptocurrency that uses an~\gls{ssle} is Polkadot which uses Safrole as their~\gls{ssle} protocol~\cite{safrole}.
