--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -25,4 +25,5 @@
 \newacronym{hvzk}{HVZK}{Honest-Verifier Zero-Knowledge}
 \newacronym{sameperm}{SamePerm}{Same Permutation}
 \newacronym{samemsm}{SameMSM}{Same Multiscalar}
+\newacronym{rrc}{RRC}{re-randomizable commitment}
 
