--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -1,4 +1,3 @@
-
 \section{Background}\label{sec:background}
 In this section, we provide the necessary background information on Ethereum and a specific attack it is vulnerable to, the Curdleproofs protocol~\cite{Curdleproofs}, the Whisk protocol~\cite{Whisk2024} and an overview of the notation used in the paper.
 
@@ -63,28 +62,24 @@ Our work therefore runs as a public coin protocol in any cryptographic group whe
 
 \subsection{Whisk}\label{subsec:related-work-whisk}
 
-\paragraph*{\textbf{Ethereum Proof of Stake}}\label{par:background-ethereum}
 Ethereum uses a proof-of-stake consensus mechanism, which allows users to validate transactions and create new blocks by staking their Ether (ETH) tokens.
 The Proof-of stake protocol works in epochs of 32 slots, where each slot is 12 seconds long.
 In each slot a proposer is chosen to propose a block thereby allowing the network to reach consensus on the state of the blockchain.
 
-\paragraph*{\textbf{Proposer DoS attack}}\label{sec:background-proposer-DoS-attacks}
 The proposer DoS attack is a type of attack that targets the block proposers making them unable to propose blocks.
-An adversary can use the proposer DoS attack to prevent a proposer from receiving rewards, gotten from proposing a block, and increase their oen rewards~\cite{EthereumSSLE2024}.
+An adversary can use the proposer DoS attack to prevent a proposer from receiving rewards, gotten from proposing a block, and increase their own rewards~\cite{EthereumSSLE2024}.
 As a response to the proposer DoS attack, Ethereum has proposed a new protocol called Whisk~\cite{Whisk2024} as an attempt to mitigate the attack.
 An attack on the Ethereum network that was discovered by Heimbach et al.~\cite{heimbach2024deanonymizingethereumvalidatorsp2p} is the deanonymization attack on validators.
-In our preliminary work~\cite{ouroldpaper}, we have shown that the attack still possible to perform on the Ethereum network, and using the attack, a proposer~\gls{dos} can be performed.
+In our preliminary work~\cite{ouroldpaper}, we have shown that the attack is still possible to perform on the Ethereum network, and using the attack, a proposer~\gls{dos} can be performed.
 
 
-\paragraph*{\textbf{The Whisk protocol}}\label{sec:background-mitigation}
 Whisk is a zero-knowledge Single Secret Leader Election (SSLE) system that uses a zero-knowledge argument called Curdleproofs~\cite{Curdleproofs} to verify the correctness of a shuffle without revealing the input or output~\cite{10.1145/3419614.3423258}.
-Whisk works by selecting a list of proposers 16384 and shuffling them over 8192 slots (1 day).
-Then 8192 proposers are selected from the shuffled list to propose blocks for the next 8192 slots while a new list is being shuffled.
+Whisk works by selecting a list of 16,384 validator trackers and shuffles them over 8,192 slots ($\sim$1 day).
+Then 8,192 proposers are selected from the shuffled list to propose blocks for the next 8,192 slots while a new list is being shuffled.
 This way a new list of proposers is created every day.
-After each shuffle Whisk uses a zero-knowledge proof to prove that the shuffle is correct.
+After each shuffle, Whisk uses a zero-knowledge proof to prove that the shuffle is correct.
 This is so that the proposer can prove that they are the correct proposer for the slot without revealing their identity, thereby mitigating the proposer~\gls{dos} attack because of the identity of the upcoming proposers being hidden now.
 
-\paragraph*{\textbf{Curdleproofs}}\label{sec:background-curdleproofs}
 Curdleproofs is a zero-knowledge proof system that allows a prover to prove knowledge of a shuffle without revealing how it shuffled the elements.
 It does so by using three different zero-knowledge proofs, with one of them relying on two more zero-knowledge proofs.
 
@@ -93,9 +88,9 @@ The prover first constructs a commitment to the permutation, $\sigma()$, by sayi
 Then, using the Fiat-Shamir transformation, a challenge, $\mathbf{a}$, from public inputs is constructed, and a new commitment is made from that, $A=\sigma(\mathbf{a})\times\mathbf{g}$.
 The~\gls{sameperm} proof now consists of convincing the verifier that the same permutation was used for constructing commitment $A$ and $M$.
 To do this, the two commitments are used to construct a polynomial equation.
-Then Neff's trick~\cite{10.1145/501983.502000}, which observes that two polynomials are equal iff.\ their roots are the same up to permutation.
+Then Neff's trick~\cite{10.1145/501983.502000} is used, which observes that two polynomials are equal iff.\ their roots are the same up to permutation.
 
-This is proven through a grand product argument.
+To prove that, the protocol makes use of a grand product argument.
 To prove that argument, Curdleproofs compiles it down to an~\gls{ipa} by expressing each multiplication of the grand product as its own equation.
 
 Hence, the~\gls{sameperm} proof is done if the prover can prove the~\gls{ipa}.
@@ -122,6 +117,8 @@ In Whisk, it uses Curdleproofs to prove the validity of a shuffle.
 \begin{definition}[Zero-Knowledge Argument of Knowledge]
     An argument $(Setup, P, V)$ is a zero-knowledge argument of knowledge of a relation $\mathbb{R}$ if it satisfies completeness, knowledge-soundness and is honest-verifier zero-knowledge.
 \end{definition}
+
+Definitions for knowledge-soundness, completeness, and~\gls{hvzk} can be found in~\autoref{sec:appendix}.
 
 \subsection{Problem definition}\label{subsec:problem-definition}
 In Chapter 6 of Curdleproofs~\cite{Curdleproofs}, they explain the efficiency of the protocol, including also the size of the proof.
