--- a/report/src/sections/05-experimental-protocol.tex
+++ b/report/src/sections/05-experimental-protocol.tex
@@ -13,11 +13,11 @@ The virtual machine is running Ubuntu Server 24.
 In this experiment we measure the time to run the CAAUrdleproofs protocol.
 The results will be compared to those of Curdleproofs, which we re-run on our own hardware.
 As Curdleproofs already has a Rust benchmark implemented, we will be using that same benchmark for both protocols.
-The parameter that we want to change between benchmark runs is the shuffle size, $k$.
+The parameter that we want to change between benchmark runs is the shuffle size, $\ell$.
 
-In CAAUrdleproofs, we will test the protocol with $k=\{8,9,\dots,256\}$.
+In CAAUrdleproofs, we will test the protocol with $\ell=\{8,9,\dots,256\}$.
 
-Since Curdleproofs is unable to run benchmarks, unless the shuffle size is a power of two, those benchmarks will be run on values $k=\{8,16,32,64,128,256\}$.
+Since Curdleproofs is unable to run benchmarks, unless the shuffle size is a power of two, those benchmarks will be run on values $\ell=\{8,16,32,64,128,256\}$.
 
 
 
@@ -25,7 +25,7 @@ Since Curdleproofs is unable to run benchmarks, unless the shuffle size is a pow
 \subsection{Shuffle security}\label{subsec:experimental-protocol-shuffle-security}
 In this experiment we run the shuffle protocol with varying shuffle sizes and varying number of adversarial tracked ciphertexts.
 The purpose of this experiment is to find the lowest possible shuffle size that is still secure.
-We therefore run the experiment with shuffle sizes, $k$, between 64 and 128.
+We therefore run the experiment with shuffle sizes, $\ell$, between 64 and 128.
 For the number of adversarial tracked ciphertexts, we use the values $\alpha=\{1/2,1/3,1/4\}$
 
 Because Curdleproofs is meant to be used in an Ethereum setting, all the experiments were done with a maximum of 8192 shuffles.
