--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -303,7 +303,7 @@ Though, this should not have a big impact on performance, as it is run over vect
 It is simply used as a measuring tool.
 
 \begin{figure}[!htb]
-        \begin{lstlisting}[language=Python,mathescape=true,label={lst:ipa-verifier-optimized},numbers=right,caption={Optimized verifier computation for CAAU-IPA in CAAUrdleproofs},captionpos=b,frame=single]
+        \begin{lstlisting}[language=Python,mathescape=true,label={lst:ipa-verifier-optimized},numbers=left,caption={Optimized verifier computation for CAAU-IPA in CAAUrdleproofs},captionpos=b,frame=single]
 $\textbf{Step 1:}$
 $(\textbf{G},H)\gets$parse$(crs_{dl_{inner}})$
 $(C,D,z,\mathbf{u})\gets$parse$(\phi_{dl_{inner}})$
