ssle and shuffling

--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -22,6 +22,15 @@ Additional to the proving and verifying times, the time used on shuffling is als
 
 \subsection{Shuffle security}\label{subsec:Shuffle-security}
 
+\begin{figure*}[!htb]
+    \centering
+    \subfloat[\centering]{{\includegraphics[width=0.45\textwidth]{figures/results/4096-256-p2} }}%
+    \qquad
+    \subfloat[\centering]{{\includegraphics[width=0.45\textwidth]{figures/results/5462-256-p2} }}%
+    \subfloat[\centering]{{\includegraphics[width=0.45\textwidth]{figures/results/8192-256-p2} }}%
+    \caption{The results of the shuffle security experiment showing the mean amount of honest shuffles necessary with one standard deviation}%
+    \label{fig:shufflesecurity}%
+\end{figure*}
 
 The results of the shuffle security experiment are shown in \autoref{fig:shufflesecurity}.
 
