--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -10,7 +10,7 @@
     \label{fig:resulttimes}%
 \end{figure*}
 
-After running the experiment where Curdleproofs and CAAUrdleproofs were compared across different Shuffle sizes, we obtained the results shown in \autoref{fig:resulttimes}.
+After running the experiment where Curdleproofs and CAAUrdleproofs were compared across different shuffle sizes, we obtained the results shown in \autoref{fig:resulttimes}.
 
 As mentioned in \autoref{sec:CAAUrdleproof-experiment}, CAAUdleproofs was run with a shuffle size $k$ of $\{8,9,\dots,256\}$ but Curdleproofs was only run with a shuffle size $k$ of $\{8,16,32,64,128,256\}$.
 This is why the results for Curdleproofs instantly goes up to the next power of 2 size of $k$ because it would have to pad the inputset until it reaches the next size of a power of 2.
