--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -15,7 +15,8 @@ After running the experiment where Curdleproofs and CAAUrdleproofs were compared
 As mentioned in \autoref{sec:CAAUrdleproof-experiment}, CAAUdleproofs was run with a shuffle size $k$ of $\{8,9,\dots,256\}$ but Curdleproofs was only run with a shuffle size $k$ of $\{8,16,32,64,128,256\}$.
 This is why the results for Curdleproofs show the shuffle size, $\ell$, instantly goes up to the next power of 2, because it theoretically would have to pad the input set until it reached the next power of 2.
 
-From the results, we can see that CAAUrdleproofs and Curdleproofs have similar proving and verifying times when $k$ is a power of 2 but whenever $k$ is not a power of 2 CAAUrdleproofs is faster.
+From the results, we can see that CAAUrdleproofs and Curdleproofs have similar proving and verifying times when $\ell$ is a power of 2.
+However, when $k$ is not a power of 2, CAAUrdleproofs is faster.
 
 Additional to the proving and verifying times, the time used on shuffling is also lower for any $k$ that is not a power of 2, but that was to be expected since CAAUrdleproofs uses the same shuffling algorithm but does not have to add additional padding values to the non power of 2 input sizes.
 
