--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -36,7 +36,7 @@ Though, that was to be expected since CAAUrdleproofs uses the same shuffling alg
 
 The results of the shuffle security experiment are shown in \autoref{fig:shufflesecurity}.
 
-\autoref{fig:shufflesecurity} shows the mean of the 1000 runs of each shuffle size $k$ as well as one standard deviation higher and lower.
+\autoref{fig:shufflesecurity} shows the mean of the 1000 runs of each shuffle size $\ell$ as well as one standard deviation higher and lower.
 
 We can see that the bigger the shuffle size $k$ the less honest shuffles are necessary to make the shuffle secure.
 We also see that the bigger the shuffle size the smaller the deviation is between necessary honest shuffles become.
