--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -38,7 +38,7 @@ The results of the shuffle security experiment are shown in \autoref{fig:shuffle
 
 \autoref{fig:shufflesecurity} shows the mean of the 1000 runs of each shuffle size $\ell$ as well as one standard deviation higher and lower.
 
-We can see that the bigger the shuffle size $k$ the less honest shuffles are necessary to make the shuffle secure.
+We can see that the bigger the shuffle size $k$ is, the less honest shuffles are necessary to make the shuffle secure.
 We also see that the bigger the shuffle size the smaller the deviation is between necessary honest shuffles become.
 
 From the results of the experiment with $\alpha=8192$ we can see that number of honest shuffles necessary to make the shuffle secure sharply goes down until a size of $k=64$, and then it starts to flatten out.
