--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -49,4 +49,4 @@ In general all three of the experiments, despite the difference in $\alpha$, sho
 There are two things however that are different between the experiments.
 At an $\alpha$ of 4096 we can see that the mean number of honest shuffles necessary to make the shuffle secure is 500 lower than the 2 others.
 Another thing that differs between the experiments is that they all have sudden dip later on in the experiment.
-Here we can see a trend that the lower the~$\alpha$ the earlier the dip happens.
+Here we can see a trend that the lower the~$\alpha$ is, the earlier the dip happens.
