Daniele related work corrections

--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -160,11 +160,19 @@ De-Anonymization Attack on Ethereum", Computer Science 9 project},
 }
 
 @article{safrole,
-    title        = {-safrole},
+    title        = {Safrole},
     author       = {Polkadot Web3 Foundation},
     note         = {Accessed: 16-05-2025},
     url = {https://wiki.polkadot.network/learn/learn-safrole/}
 }
+
+@article{sassafras,
+    title        = {Sassafras},
+    author       = {Polkadot Web3 Foundation},
+    note         = {Accessed: 23-05-2025},
+    url = {https://research.web3.foundation/Polkadot/protocols/block-production/SASSAFRAS}
+}
+
 
 @inproceedings{10.1145/501983.502000,
     author = {Neff, C. Andrew},
