--- a/report/src/sections/03-related-work.tex
+++ b/report/src/sections/03-related-work.tex
@@ -12,22 +12,30 @@ Leading research on~\gls{ssle} includes proposals for post-quantum secure protoc
 This work also constructs a new concept called~\gls{rrc} for easier work with such protocols.
 \gls{rrc} is based on the commit-and-shuffle approach also used in Whisk.
 
-One of the use cases of~\gls{ssle} is to make~\gls{pos} cryptocurrencies more secure due to the added privacy that the proposer has.
+One of the use cases of~\gls{ssle} is to make~\gls{pos} blockchains more secure due to the added privacy that the proposer has.
 
-One~\gls{pos} cryptocurrency that uses an~\gls{ssle} is Polkadot which uses Safrole as their~\gls{ssle} protocol~\cite{safrole}.
+One~\gls{pos} blockchain that uses an~\gls{ssle} is Polkadot which uses Safrole as their~\gls{ssle} protocol~\cite{safrole}.
+Safrole is the production version of the research protocol Sassafras~\cite{sassafras}.
+In this, validators each produce a number of tickets, some of which are winning, depending on some threshold.
+A~\gls{zk-snark} is then used to prove that a ticket is winning, after which the winning tickets are published to the chain.
+A randomization algorithm will then pick, from all the winning tickets, proposers for all the slots two epochs later.
 
 
 
 \subsection{Shuffling algorithms}\label{subsec:related-work-shuffling-algorithm}
 
-The Håstad square shuffle~\cite{haastad2006square} is one of the proposed ways of integrating an~\gls{ssle}.
-The Håstad square shuffle is a shuffling algorithm that shuffles a $n$ long vector with a shuffle size of $\sqrt {n}$.
-The algorithm works by splitting the vector into $\sqrt {n}$ times $\sqrt {n}$ square matrix and for each step in the algorithm it switches between shuffling a row and a column.
-The Håstad shuffle is more rigid than the shuffling algorithm used in curdleproofs~\cite{cryptoeprint:2022/560} because of the fixed size of the shuffle being $\sqrt {n}$.
+The Håstad square shuffle~\cite{haastad2006square} is one of the proposed ways of shuffling, which could be integrated in a shuffling~\gls{ssle} such as Whisk.
+The Håstad square shuffle is a shuffling algorithm that shuffles a vector with $n$ items with a shuffle size of $\sqrt {n}$.
+The algorithm works by re-arranging the vector into a~$\sqrt{n}\times\sqrt{n}$ square matrix.
+It then works in time steps, starting at 1.
+For each odd step, each column and its elements are shuffled independently.
+For each even step, each row and its elements are shuffled independently as well.
+Håstad shows that at least three time steps are needed for the shuffle to be secure.
+The Håstad shuffle is more rigid than the shuffling algorithm used in curdleproofs~\cite{cryptoeprint:2022/560} because of the fixed size of the shuffle being $\sqrt{n}$.
 
 The Feistel shuffle~\cite{Feistle} is a previously used shuffle method in the Whisk protocol~\cite{Whisk2024}.
-It takes $n$ number of validator trackers and arranges them in a $k$ times $k$ matrix.
-Each round the $i$-th proposer selects the $i$-th row of the created matrix and shuffles it in the form $F(x,y)=(y,x+y^3 mod k)$.
+It takes $n$ number of validator trackers and arranges them in a $k\times k$ matrix.
+Each round the $i$-th proposer selects the $i$-th row of the created matrix and shuffles it in the form $F(x,y)=(y,x+y^3\text{ mod }k)$.
 The Feistel shuffle was later replaced by the shuffle proposed by Larsen et al.~\cite{cryptoeprint:2022/560}.
 Ethereum mentioned the reason for this to be that the shuffle by Larsen et al.\ provides a simpler protocol~\cite{Whisk2024}.
 
