--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -12,14 +12,17 @@
 
 After running the experiment where Curdleproofs and CAAUrdleproofs were compared across different shuffle sizes, we obtained the results shown in \autoref{fig:resulttimes}.
 
-As mentioned in \autoref{sec:CAAUrdleproof-experiment}, CAAUdleproofs was run with a shuffle size $k$ of $\{8,9,\dots,256\}$ but Curdleproofs was only run with a shuffle size $k$ of $\{8,16,32,64,128,256\}$.
+As mentioned in \autoref{sec:CAAUrdleproof-experiment}, CAAUdleproofs was run with a shuffle size $\ell$ of $\{8,9,\dots,256\}$ but Curdleproofs was only run with a shuffle size $\ell$ of $\{8,16,32,64,128,256\}$.
 This is why the results for Curdleproofs show the shuffle size, $\ell$, instantly goes up to the next power of 2, because it theoretically would have to pad the input set until it reached the next power of 2.
 
 From the results, we can see that CAAUrdleproofs and Curdleproofs have similar proving and verifying times when $\ell$ is a power of 2.
-However, when $k$ is not a power of 2, CAAUrdleproofs is faster.
+However, when $\ell$ is not a power of 2, CAAUrdleproofs is faster.
+
+The results for the verifying time also shows that the verifying time jumps up the first four times it reaches a power of 2.
 
 Additional to the proving and verifying times, the time used on shuffling is also lower for any $\ell$ that is not a power of 2.
 Though, that was to be expected since CAAUrdleproofs uses the same shuffling algorithm as Curdleproofs but does not have to add additional padding values to the non power of 2 input sizes.
+
 
 
 \subsection{Shuffle security}\label{subsec:Shuffle-security}
@@ -38,15 +41,17 @@ The results of the shuffle security experiment are shown in \autoref{fig:shuffle
 
 \autoref{fig:shufflesecurity} shows the mean of the 1000 runs of each shuffle size $\ell$ as well as one standard deviation higher and lower.
 
-We can see that the bigger the shuffle size $k$ is, the less honest shuffles are necessary to make the shuffle secure.
-We also see that the bigger the shuffle size the smaller the deviation is between necessary honest shuffles become.
+We can see that the bigger the shuffle size $\ell$ is, the less honest shuffles are necessary to make the shuffle secure.
+We also see that the bigger the shuffle size the narrower the standard deviation gets.
 
-From the results of the experiment with $\alpha=8192$ we can see that number of honest shuffles necessary to make the shuffle secure sharply goes down until a size of $k=64$, and then it starts to flatten out.
-we can see that with a size of $k=75$ we need about 1/3 of the shuffles to be honest to make the shuffle secure.
-Likewise, we can see the at $k=108$ we need about 1/4 of the shuffles to be honest to make the shuffle secure.
+From the results of the experiment with $\alpha=8192$ we can see that number of honest shuffles necessary to make the shuffle secure sharply goes down until a size of $\ell=64$, and then it starts to flatten out.
+we can see that with a size of $\ell=75$ we need about 1/3 of the shuffles to be honest to make the shuffle secure.
+Likewise, we can see the at $\ell=108$ we need about 1/4 of the shuffles to be honest to make the shuffle secure.
 
 In general all three of the experiments, despite the difference in $\alpha$, show the same trend.
+They all level out but the higher the $\alpha$ is, the lower the leveling happens but the later it happens as well.
 There are two things however that are different between the experiments.
-At an $\alpha$ of 4096 we can see that the mean number of honest shuffles necessary to make the shuffle secure is 500 lower than the 2 others.
+At an $\alpha$ of 4096 we can see that at the start, with $\ell=32$, the mean number of honest shuffles necessary to make the shuffle secure is \sim500 lower than the 2 others.
+As $\ell$ increases, the mean number of honest shuffles necessary to make the shuffle secure becomes similar to the other $\alpha$ values.
 Another thing that differs between the experiments is that they all have sudden dip later on in the experiment.
 Here we can see a trend that the lower the~$\alpha$ is, the earlier the dip happens.
