missing math field

--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -51,7 +51,7 @@ Likewise, we can see the at $\ell=108$ we need about 1/4 of the shuffles to be h
 In general all three of the experiments, despite the difference in $\alpha$, show the same trend.
 They all level out but the higher the $\alpha$ is, the lower the leveling happens but the later it happens as well.
 There are two things however that are different between the experiments.
-At an $\alpha$ of 4096 we can see that at the start, with $\ell=32$, the mean number of honest shuffles necessary to make the shuffle secure is \sim500 lower than the 2 others.
+At an $\alpha$ of 4096 we can see that at the start, with $\ell=32$, the mean number of honest shuffles necessary to make the shuffle secure is $\sim500$ lower than the 2 others.
 As $\ell$ increases, the mean number of honest shuffles necessary to make the shuffle secure becomes similar to the other $\alpha$ values.
 Another thing that differs between the experiments is that they all have sudden dip later on in the experiment.
 Here we can see a trend that the lower the~$\alpha$ is, the earlier the dip happens.
